[package]
name = "powermeter-lora"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "task-arena-size-65536"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
embassy-sync = {version = "0.6", features = ["defmt"] }

cyw43 = { version = "0.2", optional = true }
cyw43-pio = { version = "0.2", features = ["overclock"], optional = true }
static_cell = { version = "2.1", optional = true }
portable-atomic = { version = "1.7", features = ["critical-section"], optional = true } # needed for static_cell on thumbv6

lora-phy = { version = "3.0", features= ["lorawan-radio"]}
lorawan = { version = "0.9", default-features = false, features = ["default-crypto"]}
lorawan-device = { version = "0.12", default-features = false, features= ["region-eu868", "defmt", "default-crypto", "embassy-time"]}

embedded-hal-bus = { version = "0.1", features = ["async"]}
const-hex = {version = "1.12", default-features = false}

embassy-rp-flash-struct = {version = "1.0", git= "https://github.com/ludgerheide/embassy-rp-flash-struct.git"}
bincode = { version = ">=2.0.0-rc.3, <2.1", default-features = false, features=["derive"]}
embedded-io-async = "0.6"
micromath = { version = "2.1", features=["num-traits"] }

[features]
default = ["pico_w"]
pico_non_w = []
pico_w = ["dep:cyw43", "dep:cyw43-pio", "dep:static_cell", "dep:portable-atomic"]


[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
